--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
 spring.messages.basename=messages,errors
 
+# secret cookie
 server.servlet.session.tracking-modes=cookie
 
+# file URL setting
 file.dir=/Users/limwootaek/spring/file/
+
+# DB setting
+spring.datasource.url=jdbc:h2:tcp://localhost/~/hospital
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create
+
+# show SQL
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=debug
