--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.messages.basename=messages,errors
+spring.messages.basename=messages,error
 
 # secret cookie
 server.servlet.session.tracking-modes=cookie
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/hospital
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 # show SQL
 spring.jpa.properties.hibernate.format_sql=true
